--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/bash
 set-window-option -g mode-keys vi
 set -g mode-mouse on
 
