--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -52,6 +52,7 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 bind -n C-p  next-window
+bind -n C-n  new-window
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -65,6 +66,9 @@ set -g status-fg white
 set -g window-status-current-bg white
 set -g window-status-current-fg black
 set -g window-status-current-attr bold
+set -g window-status-activity-bg red
+set -g window-status-activity-fg black
+set -g window-status-separator "  |  "
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
