--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -20,10 +20,10 @@ setw -g monitor-activity on
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+bind-key J resize-pane -D 20
+bind-key K resize-pane -U 20
+bind-key H resize-pane -L 20
+bind-key L resize-pane -R 20
 
 bind-key M-j resize-pane -D
 bind-key M-k resize-pane -U
@@ -63,15 +63,14 @@ bind r source-file ~/.tmux.conf
 # THEME
 set -g status-bg black
 set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
+#set -g window-status-current-bg white
+#set -g window-status-current-fg black
 set -g window-status-current-attr bold
-set -g window-status-activity-bg red
-set -g window-status-activity-fg black
+#set -g window-status-activity-bg red
+#set -g window-status-activity-fg black
 set -g window-status-separator "  |  "
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
 unbind C-b
 set -g prefix `
