--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -20,10 +20,10 @@ setw -g monitor-activity on
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key J resize-pane -D 20
-bind-key K resize-pane -U 20
-bind-key H resize-pane -L 20
-bind-key L resize-pane -R 20
+bind-key J resize-pane -D 10
+bind-key K resize-pane -U 10
+bind-key H resize-pane -L 10
+bind-key L resize-pane -R 10
 
 bind-key M-j resize-pane -D
 bind-key M-k resize-pane -U
@@ -53,6 +53,7 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 bind -n C-p  next-window
 bind -n C-n  new-window
+bind -n C-v  next-layout
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -75,3 +76,8 @@ set -g status-left-length 30
 unbind C-b
 set -g prefix `
 bind-key ` send-prefix
+
+select-layout even-vertical
+select-layout even-horizontal
+
+bind-key -t vi-copy Enter copy-pipe "nc localhost 8377"
