--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,6 +2,10 @@ set-option -g default-shell /bin/bash
 set-window-option -g mode-keys vi
 set -g mode-mouse on
 
+unbind C-b
+set -g prefix `
+bind-key ` send-prefix
+
 # 0 is too far from ` ;)
 set -g base-index 1
 
@@ -25,28 +29,11 @@ bind-key K resize-pane -U 10
 bind-key H resize-pane -L 10
 bind-key L resize-pane -R 10
 
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
-
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+#bind h select-pane -L
+#bind j select-pane -D
+#bind k select-pane -U
+#bind l select-pane -R
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
@@ -64,20 +51,16 @@ bind r source-file ~/.tmux.conf
 # THEME
 set -g status-bg black
 set -g status-fg white
-#set -g window-status-current-bg white
-#set -g window-status-current-fg black
 set -g window-status-current-attr bold
-#set -g window-status-activity-bg red
-#set -g window-status-activity-fg black
 set -g window-status-separator "  |  "
 set -g status-interval 60
 set -g status-left-length 30
 
-unbind C-b
-set -g prefix `
-bind-key ` send-prefix
-
-select-layout even-vertical
-select-layout even-horizontal
-
-bind-key -t vi-copy Enter copy-pipe "nc localhost 8377"
+# Smart pane switching with awareness of vim splits
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
