--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -24,10 +24,10 @@ setw -g monitor-activity on
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key J resize-pane -D 10
-bind-key K resize-pane -U 10
-bind-key H resize-pane -L 10
-bind-key L resize-pane -R 10
+bind-key j resize-pane -D 10
+bind-key k resize-pane -U 10
+bind-key h resize-pane -L 10
+bind-key l resize-pane -R 10
 
 # Vim style pane selection
 #bind h select-pane -L
