--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -15,32 +15,29 @@ set-option -g set-titles on
 
 #set -g default-terminal screen-256color
 set -g status-keys vi
-set -g history-limit 10000
+set -g history-limit 100000
 
 setw -g mode-keys vi
 setw -g mode-mouse on
+setw -g mouse-resize-pane on
+setw -g mouse-select-pane on
+setw -g mouse-select-window on
 setw -g monitor-activity on
 
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key j resize-pane -D 10
-bind-key k resize-pane -U 10
-bind-key h resize-pane -L 10
-bind-key l resize-pane -R 10
-
-# Vim style pane selection
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
+bind-key j resize-pane -D 5
+bind-key k resize-pane -U 5
+bind-key h resize-pane -L 5
+bind-key l resize-pane -R 5
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 bind -n C-p  next-window
 bind -n C-n  new-window
-bind -n C-v  next-layout
+bind -n C-t  next-layout
 
 # No delay for escape key press
 set -sg escape-time 0
