--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -26,6 +26,7 @@ setw -g monitor-activity on
 
 bind-key v split-window -h
 bind-key s split-window -v
+bind-key f resize-pane -Z
 
 bind-key j resize-pane -D 5
 bind-key k resize-pane -U 5
@@ -37,7 +38,7 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 bind -n C-p  next-window
 bind -n C-n  new-window
-bind -n C-t  next-layout
+# bind -n C-t  next-layout
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -46,12 +47,13 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
-set -g status-bg black
-set -g status-fg white
+set -g status-bg colour232
+set -g status-fg colour253
 set -g window-status-current-attr bold
-set -g window-status-separator "  |  "
+set -g window-status-separator " "
 set -g status-interval 60
-set -g status-left-length 30
+set -g status-left-length 0
+set -g status-right-length 0
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -61,3 +63,12 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+bind -n C-f if-shell "$is_vim" "send-keys C-f" "copy-mode"
+
+
+# border colours
+set -g pane-border-fg colour240
+set -g pane-border-bg colour232
+set -g pane-active-border-fg colour240
+set -g pane-active-border-bg colour232
