--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -49,11 +49,14 @@ bind r source-file ~/.tmux.conf
 # THEME
 set -g status-bg colour234
 set -g status-fg colour253
-set -g window-status-current-attr bold
+set -g window-status-activity-bg colour234
+set -g window-status-activity-fg colour253
+set -g window-status-current-bg red
 set -g window-status-separator " "
-set -g status-interval 60
+set -g status-interval 1
 set -g status-left-length 0
 set -g status-right-length 50
+set -g visual-activity off
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -72,3 +75,7 @@ set -g pane-border-fg colour240
 set -g pane-border-bg colour234
 set -g pane-active-border-fg colour240
 set -g pane-active-border-bg colour234
+
+set -g clock-mode-style 12
+
+set -g status-right '#[fg=white,bg=default]%l:%M %p -- %a %m/%d/%Y'
