--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -58,6 +58,15 @@ set -g status-left-length 0
 set -g status-right-length 50
 set -g visual-activity off
 
+# border colours
+set -g pane-border-fg colour240
+set -g pane-border-bg colour234
+set -g pane-active-border-fg colour202
+set -g pane-active-border-bg colour234
+
+# date + time
+set -g status-right '#[fg=white,bg=default]%l:%M %p -- %a %m/%d/%Y'
+
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
@@ -66,16 +75,7 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
 bind -n C-f if-shell "$is_vim" "send-keys C-f" "copy-mode"
 
-
-# border colours
-set -g pane-border-fg colour240
-set -g pane-border-bg colour234
-set -g pane-active-border-fg colour240
-set -g pane-active-border-bg colour234
-
-set -g clock-mode-style 12
-
-set -g status-right '#[fg=white,bg=default]%l:%M %p -- %a %m/%d/%Y'
+# save pane to file
+bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
