--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -38,6 +38,7 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 bind -n C-p  next-window
 bind -n C-n  new-window
+bind -n C-v paste-buffer
 # bind -n C-t  next-layout
 
 # No delay for escape key press
