--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -25,6 +25,7 @@ setw -g mouse-select-window on
 setw -g monitor-activity on
 
 bind-key v split-window -h
+bind-key e select-layout even-horizontal
 bind-key s split-window -v
 bind-key f resize-pane -Z
 
@@ -60,10 +61,10 @@ set -g status-right-length 50
 set -g visual-activity off
 
 # border colours
-set -g pane-border-fg colour240
+set -g pane-border-fg colour252
 set -g pane-border-bg colour234
-set -g pane-active-border-fg colour202
-set -g pane-active-border-bg colour234
+set -g pane-active-border-fg colour035
+set -g pane-active-border-bg colour035
 
 # date + time
 set -g status-right '#[fg=white,bg=default]%l:%M %p -- %a %m/%d/%Y'
@@ -80,3 +81,6 @@ bind -n C-f if-shell "$is_vim" "send-keys C-f" "copy-mode"
 
 # save pane to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+
+bind-key [ swap-pane -U
+bind-key ] swap-pane -D
