--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -27,7 +27,7 @@ setw -g monitor-activity on
 bind-key v split-window -h
 bind-key e select-layout even-horizontal
 bind-key s split-window -v
-bind-key f resize-pane -Z
+bind-key -n C-f resize-pane -Z
 
 bind-key j resize-pane -D 5
 bind-key k resize-pane -U 5
@@ -77,7 +77,7 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind -n C-f if-shell "$is_vim" "send-keys C-f" "copy-mode"
+bind -n C-g if-shell "$is_vim" "send-keys C-f" "copy-mode"
 
 # save pane to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
