--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -84,3 +84,7 @@ bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'ca
 
 bind-key [ swap-pane -U
 bind-key ] swap-pane -D
+
+#rate-limiting
+setw -g c0-change-interval 50
+setw -g c0-change-trigger  75
